homepage alignment fixed. other pages are broken

--- a/client/stylesheets/css/main.css
+++ b/client/stylesheets/css/main.css
@@ -71,20 +71,18 @@ header {
   ===================================
 */
 .container {
-  width: 90%; }
-
-.summary-box {
-  margin: auto;
-  width: 100%; }
+  width: 95%;
+  margin: auto; }
   @media only screen and (min-width: 76.9rem) and (max-width: 180rem) {
-    .summary-box {
+    .container {
       width: 70%; } }
-  .summary-box p {
-    background: white;
-    padding: 3.25rem; }
-    @media only screen and (min-width: 76.9rem) and (max-width: 180rem) {
-      .summary-box p {
-        padding: 3rem 25.0rem; } }
+
+.summary-box p {
+  background: white;
+  padding: 3.25rem; }
+  @media only screen and (min-width: 76.9rem) and (max-width: 180rem) {
+    .summary-box p {
+      padding: 3rem 15.0rem; } }
 
 /*
   ===================================
